fixed gap

--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -18,7 +18,7 @@
 
     @media screen and (min-width:768px) {
         flex-wrap: nowrap;
-        gap: 4px;
+        gap: 50px;
     }
 
     @media screen and (min-width:1200px) {
@@ -69,7 +69,7 @@
 
     @media screen and (min-width:768px) {
         margin-right: 0;
-        width: 162px;
+        width: 200px;
         font-size: 14px;
         line-height: 1.7;
     }
